Attempt to fix background display on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,17 @@
 html {
   /* background: rgb(49, 49, 49); */
-  background: rgb(2, 18, 70) url('./bruno-cervera-408708-unsplash.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100% auto;
-  background-attachment: fixed;
-  box-sizing: border-box;
   height: 100%;
 }
 
 body {
   color: rgb(255, 255, 255);
+  height: 100%;
+  box-sizing: border-box;
+  background: rgb(2, 18, 70) url('./bruno-cervera-408708-unsplash.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-attachment: fixed;
 }
 
 *, *:before, *:after {
@@ -310,7 +311,7 @@ li.playlist-header {
 
 
 @media only screen and (max-width: 550px) {
-  html {
+  html, body {
     background-size: auto 100%;
   }
 
